htmxology-macros/src/identity/snapshots/htmxology_macros__identity__snapshot_tests__generic_with_bounds_and_default.snap
---
source: htmxology-macros/src/identity/mod.rs
expression: test_identity(input)
---
#[allow(unused)]
mod __test {
    impl<T: Display = String> htmxology::htmx::Identity for Baz<T> {
        fn id(&self) -> htmxology::htmx::HtmlId {
            htmxology::htmx::HtmlId::from_static("baz")
                .expect("ID was validated at compile time")
        }
    }
}
