htmxology-macros/src/identity/snapshots/htmxology_macros__identity__snapshot_tests__generic_with_default.snap
---
source: htmxology-macros/src/identity/mod.rs
expression: test_identity(input)
---
#[allow(unused)]
mod __test {
    impl<T = Bar> htmxology::htmx::Identity for Foo<T> {
        fn id(&self) -> htmxology::htmx::HtmlId {
            htmxology::htmx::HtmlId::from_static("foo")
                .expect("ID was validated at compile time")
        }
    }
}
