htmxology-macros/src/identity/snapshots/htmxology_macros__identity__snapshot_tests__mixed_lifetime_and_generic_with_default.snap
---
source: htmxology-macros/src/identity/mod.rs
expression: test_identity(input)
---
#[allow(unused)]
mod __test {
    impl<'a, T = &'a str> htmxology::htmx::Identity for Mixed<'a, T> {
        fn id(&self) -> htmxology::htmx::HtmlId {
            htmxology::htmx::HtmlId::from_static("mixed")
                .expect("ID was validated at compile time")
        }
    }
}
