htmxology-macros/src/identity/snapshots/htmxology_macros__identity__snapshot_tests__multiple_generics_with_defaults.snap
---
source: htmxology-macros/src/identity/mod.rs
expression: test_identity(input)
---
#[allow(unused)]
mod __test {
    impl<T = Foo, U: Clone = Vec<u8>> htmxology::htmx::Identity for Multi<T, U> {
        fn id(&self) -> htmxology::htmx::HtmlId {
            htmxology::htmx::HtmlId::from_static("multi")
                .expect("ID was validated at compile time")
        }
    }
}
