htmxology-macros/src/identity/snapshots/htmxology_macros__identity__snapshot_tests__simple_struct.snap
---
source: htmxology-macros/src/identity/mod.rs
expression: test_identity(input)
---
#[allow(unused)]
mod __test {
    impl htmxology::htmx::Identity for MyElement {
        fn id(&self) -> htmxology::htmx::HtmlId {
            htmxology::htmx::HtmlId::from_static("my-element")
                .expect("ID was validated at compile time")
        }
    }
}
